--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,27 @@
+version: '3.9'
 services:
-  catalogo:
+  app:
     build: .
     ports:
       - "5000:5000"
+    volumes:
+      - .:/app
+    environment:
+      FLASK_APP: "app"  
+      FLASK_ENV: "development"
     depends_on:
-      - redis
-  redis:
-    image: redis:latest
+      - db
+    command: flask run --host=0.0.0.0
+  db:
+    image: postgres:15
     ports:
-      - "6379:6379"
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "12345678"
+      POSTGRES_DB: "catalogo_db"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
