--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build: .
     ports:
-      - "5000:5000"
+      - "5001:5001"
     volumes:
       - .:/app
     environment:
@@ -11,7 +11,7 @@ services:
       FLASK_ENV: "development"
     depends_on:
       - db
-    command: flask run --host=0.0.0.0
+    command: flask run --host=0.0.0.0 --port=5002
   db:
     image: postgres:15
     ports:
